--- a/src/app/layout/topnav/topnav.component.html
+++ b/src/app/layout/topnav/topnav.component.html
@@ -26,7 +26,7 @@
             height: 44px;
           }
         </style>
-        <div class="avatar avatar-lg position-relative" routerLink="/profile">
+        <div class="avatar avatar-lg position-relative" routerLink="/setting">
           <img [src]="userDetails?.userimg || defaultimage" alt="profile_image" class="w-75 border-radius-xl shadow">
         </div>
 
