--- a/src/app/profile/profile.component.html
+++ b/src/app/profile/profile.component.html
@@ -23,13 +23,13 @@
     <div class="col-lg-4 col-md-6 my-sm-auto ms-sm-auto me-sm-0 mx-auto mt-3">
       <div class="nav-wrapper position-relative end-0">
         <ul class="nav nav-pills nav-fill p-1" role="tablist">
-          <li class="nav-item" routerLink="/profile" routerLinkActive="active bg-gradient-primary border-radius-lg">
+          <!-- <li class="nav-item" routerLink="/profile" routerLinkActive="active bg-gradient-primary border-radius-lg">
             <a class="nav-link mb-0 px-0 py-1 " data-bs-toggle="tab" href="javascript:;" role="tab"
               aria-selected="true">
               <i class="material-icons text-lg position-relative">home</i>
               <span class="ms-1">Profile</span>
             </a>
-          </li>
+          </li> -->
           <li class="nav-item" routerLink="/messages" routerLinkActive="active bg-gradient-primary ">
             <a class="nav-link mb-0 px-0 py-1" data-bs-toggle="tab" href="javascript:;" role="tab"
               aria-selected="false">
@@ -50,7 +50,7 @@
   </div>
   <div class="row">
     <div class="row">
-      <div class="col-12 col-xl-4">
+      <!-- <div class="col-12 col-xl-4">
         <div class="card card-plain h-100">
           <div class="card-header pb-0 p-3">
             <h6 class="mb-0">Platform Settings</h6>
@@ -106,8 +106,8 @@
             </ul>
           </div>
         </div>
-      </div>
-      <div class="col-12 col-xl-4">
+      </div> -->
+      <!-- <div class="col-12 col-xl-4">
         <div class="card card-plain h-100">
           <div class="card-header pb-0 p-3">
             <div class="row">
@@ -152,8 +152,8 @@
             </ul>
           </div>
         </div>
-      </div>
-      <div class="col-12 col-xl-4">
+      </div> -->
+      <!-- <div class="col-12 col-xl-4">
         <div class="card card-plain h-100">
           <div class="card-header pb-0 p-3">
             <h6 class="mb-0">Conversations</h6>
@@ -213,8 +213,8 @@
             </ul>
           </div>
         </div>
-      </div>
-      <div class="col-12 mt-4">
+      </div> -->
+      <!-- <div class="col-12 mt-4">
         <div class="mb-5 ps-3">
           <h6 class="mb-1">Popular Plans</h6>
           <p class="text-sm">Architects design houses</p>
@@ -245,7 +245,6 @@
                 </ul>
                 <p class="mb-4 text-sm">
                   {{plan?.desc}}
-                  <!-- As Uber works through a huge amount of internal management turmoil. -->
                 </p>
                 <div class="d-flex align-items-center">
                   <button type="button" class="btn btn-outline-primary btn-sm mb-0">View Detials</button>
@@ -254,7 +253,7 @@
             </div>
           </div>
         </div>
-      </div>
+      </div> -->
     </div>
   </div>
 </div>
